rundeck-k8s/rundeck.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rundeck
  namespace: rundeck
  labels:
    app: rundeck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rundeck
  template:
    metadata:
      labels:
        app: rundeck
    spec:
      serviceAccountName: rundeck
      securityContext:
       fsGroup: 1000
      containers:
        - name: rundeck
          image: rundeck/rundeck:5.2.0
          ports:
            - containerPort: 4440
          volumeMounts:
            - name: aclpolicy
              mountPath: /home/rundeck/etc/user.aclpolicy
              subPath: user.aclpolicy
            - name: rundeck-persistent-storage
              mountPath: /home/rundeck/projects
              subPath: projects
            - name: rundeck-persistent-storage
              mountPath: /home/rundeck/libext
              subPath: libext    
      volumes:
        - name: aclpolicy
          secret:
            secretName: rundeck-adm-policy
            items:
            - key: rundeck-admin-role.yaml
              path: user.aclpolicy
        - name: rundeck-persistent-storage
          persistentVolumeClaim: 
            claimName: rundeck        
    # securityContext:
    # fsGroup: 775
---
### Service Expose
apiVersion: v1
kind: Service
metadata:
  name: rundeck-svc
  namespace: mynamespace
spec:
  selector:
    app: rundeck
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 4440
      targetPort: 4440
---
### Istio Mesh
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
   name: rundeck-internal-rule
   namespace: mynamespace
spec:
   hosts:
   - rundeck.mydomain.com
   gateways:
   - default/main-gateway
   - mesh
   http:
   - match:
     - uri:
         prefix: /
     route:
     - destination:
        port:
          number: 4440
        host: rundeck-svc.mynamespace.svc.cluster.local
